--- a/DEV - Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__code_debugger.yaml
+++ b/DEV - Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__code_debugger.yaml
@@ -1,14 +1,14 @@
 # ───────────────────────────────────────────────────────────────
 # FRAMEWORK
 # ───────────────────────────────────────────────────────────────
-role: Expert Developer using SpecKit for debug-test-review
-purpose: Evidence-based debugging with strict validation
-action: Run SpecKit for debug-test-review with DevTools MCP
+role: Expert Developer using SpecKit for debug-test-review with parallel analysis sub-agents
+purpose: Evidence-based debugging accelerated by parallel evidence tracks, with MCP DevTools leveraged centrally
+action: Run parallel evidence collection (logs, repro, static read, hypotheses) → correlate → synthesize debug_plan.md → implement fix
 
 operating_mode:
   execution: autonomous
   approvals: none
-  workflow: sequential
+  workflow: sequential_with_parallel_blocks
   workflow_compliance: MANDATORY
   validation: checkpoint_verification
   # Prevent context window overload by constraining default scope
@@ -60,11 +60,11 @@ rules:
     - validate_before_proceeding
     - use_devtools_for_evidence_collection
     - self_validate_and_proceed
-    - do_not_prompt_for_user_approval
     - limit_context_to_active_scope
     - prefer_simple_over_clever
     - enforce_scope_discipline
     - confirm_pre_code_checklist_from_AGENTS
+    - enforce_review_before_synthesis
   NEVER:
     - skip_workflow_steps
     - ignore_evidence
@@ -110,50 +110,34 @@ field_handling:
     rule: "Limit file operations to scope when provided; ALWAYS include [SPEC_FOLDER]/** when provided"
 
 # ───────────────────────────────────────────────────────────────
-# WORKFLOW
+# SUB-AGENTS (PARALLEL EVIDENCE TRACKS)
+# ───────────────────────────────────────────────────────────────
+sub_agents:
+  - id: logs
+    name: Log/Trace Analyst
+    role: Extract error signatures, stack traces, console patterns, performance marks
+  - id: repro
+    name: Reproducer
+    role: Establish minimal reproduction steps/test; environment invariants
+  - id: static
+    name: Static Code Reader
+    role: Identify suspect code paths, invariants, coupling, anti-patterns
+  - id: hypo
+    name: Hypothesis Generator
+    role: Generate and rank hypotheses grounded in evidence
+  - id: reviewer
+    name: Lead Reviewer
+    role: Correlate signals; select likely root cause; define validation checks
+  - id: strategist
+    name: Fix Strategist
+    role: Propose minimal-change fix with regression tests and rollout plan
+
+# ───────────────────────────────────────────────────────────────
+# WORKFLOW (PARALLEL OUTPUT QA BY MAIN AGENT)
 # ───────────────────────────────────────────────────────────────
 workflow:
   step_1_request_analysis:
-    input_source: USER_INPUTS_SECTION_ABOVE
-    git_branch: "[GIT_BRANCH] → auto-create if empty"
-    spec_folder: "[SPEC_FOLDER] → auto-create if empty"
-    context: "[CONTEXT] → infer if empty"
-    issues: "[ISSUES] → discover if empty"
-    request: "Use [REQUEST] if provided, else use default from request_handling"
-    environment: "[STAGING LINK] → skip DevTools if empty"
-    scope: "[FILES] → default scope if empty; ALWAYS include [SPEC_FOLDER]/**"
-    action: Analyze inputs and confirm understanding
-
-    debug_analysis:
-      surface_understanding:
-        - What is explicitly requested?
-        - What are the stated symptoms?
-        - What is the expected vs actual behavior?
-
-      deeper_implications:
-        - What might be unstated assumptions?
-        - What related systems could be affected?
-        - Relevant history/context?
-        - Root causes beyond the obvious?
-
-      risk_assessment:
-        - What could go wrong with fixes?
-        - Which dependencies might break?
-        - Which edge cases matter?
-
-    chrome_devtools:
-      if_staging_url_provided:
-        - mcp__chrome-devtools__navigate_page: Open environment
-        - mcp__chrome-devtools__take_snapshot: Capture state
-        - mcp__chrome-devtools__take_screenshot: Document behavior
-        - mcp__chrome-devtools__list_console_messages: Check errors
-
-    outputs:
-      - issue_summary
-      - investigation_approach
-      - complexity_assessment
-      - success_criteria_definition
-
+    action: Analyze inputs and confirm understanding; define success criteria
     validation: understanding_confirmed
 
   step_2_pre_work_review:
@@ -161,66 +145,83 @@ workflow:
       - AGENTS.md
       - knowledge/code_standards.md
       - knowledge/debugging.md
-
-    debug_context_gathering:
-      documentation_review:
-        - Previous issues and solutions
-        - Architecture decisions
-        - Knowledge base standards
-        - Related bug fixes
-
-      environment_analysis:
-        - Platform constraints
-        - Browser compatibility requirements
-        - Performance baselines
-        - Third-party integrations
-
-      code_archaeology:
-        - Git history for context
-        - Related component changes
-        - Previous bug fixes in area
-        - Pattern evolution
-
-    verification: MUST REVIEW
     validation: principles_established
 
   step_3_specification:
     command: /specify [debug-investigation-plan]
-    outputs:
-      - feature_branch: created  # Uses debug-[NNN]-[description] naming
-      - investigation_spec.md: debug_criteria
-      - location: specs/[NNN-debug]/spec.md  # Debug specs use [NNN-debug-description] format
-
-    systematic_investigation:
-      hypothesis_generation:
-        - List ALL possible causes
-        - Include unlikely scenarios
-        - Consider timing/race conditions
-
-      prioritize_investigation:
-        - Most likely causes first
-        - Quick wins
-        - Plan complex scenarios
-        - Map dependencies
-
     validation: investigation_spec_complete
-    chrome_devtools:
-      when: analyzing_issue_behavior
-      approach: Nav → Snapshot → Analyze → Document
 
-      environment_setup:
-        - mcp__chrome-devtools__navigate_page: Load target environment
-        - mcp__chrome-devtools__take_snapshot: Capture DOM + UIDs
-        - mcp__chrome-devtools__list_console_messages: Monitor console
-        - mcp__chrome-devtools__list_network_requests: Monitor API calls
-        - mcp__chrome-devtools__resize_page: Test responsive breakpoints
+  # Parallel evidence gathering between spec and clarification
+  step_4_parallel_evidence:
+    analyze_inputs:
+      unify_problem_statement: true
+      define_invariants: true
+    parallel_work:
+      execution: parallel
+      concurrency: 3
+      shared_context:
+        - request
+        - context
+      tasks:
+        - agent: logs
+          instructions: Collect console errors, stack traces, perf marks; extract error signature
+          expected_output:
+            type: markdown
+            sections: [errors, stacks, perf_marks, signature]
+        - agent: repro
+          instructions: Derive minimal repro steps/test; list environment invariants
+          expected_output:
+            type: markdown
+            sections: [steps, minimal_repro, invariants]
+        - agent: static
+          instructions: Identify suspect code paths and invariants; reason about potential fault lines
+          expected_output:
+            type: markdown
+            sections: [suspect_paths, invariants, coupling, antipatterns]
+        - agent: hypo
+          instructions: Generate ranked hypotheses mapped to evidence; note disconfirming signals
+          expected_output:
+            type: markdown
+            sections: [hypotheses_ranked, evidence_map, disconfirming_signals]
+    review:
+      by: reviewer
+      focus:
+        - correlate_evidence
+        - choose_primary_root_cause_hypothesis
+        - define_validation_checks
+      outputs:
+        - synthesis_guidance
+        - selected_root_cause
+        - validation_checks
+    synthesis:
+      by: strategist
+      action: Produce debug_plan.md with root cause, evidence, fix outline, tests, rollout
+      output_files:
+        - "[SPEC_FOLDER]/debug_plan.md"
+      validation_checklist:
+        - root_cause_supported_by_evidence
+        - minimal_change_fix_defined
+        - regression_tests_listed
+        - rollout_plan_defined
+    main_agent_finalization:
+      by: MAIN_AGENT
+      action: QA review and finalization of "[SPEC_FOLDER]/debug_plan.md"
+      checks:
+        - confirm_alignment_with_request_and_context
+        - validate_completeness_and_consistency
+        - ensure_output_format_and_sections_present
+        - resolve_remaining_open_questions_or_note_them
+      outputs:
+        - main_agent_review_notes
+        - final_signoff: true
 
-      baseline_capture:
-        - mcp__chrome-devtools__take_screenshot: Document state
-        - mcp__chrome-devtools__evaluate_script: Check init state
-        - mcp__chrome-devtools__performance_start_trace: Start baseline
+  step_5_quality_checklist:
+    command: /speckit.checklist
+    outputs:
+      - quality_checklist: generated
+    validation: checklist_generated
 
-  step_4_clarification:
+  step_6_clarification:
     command: /clarify
     outputs:
       - reproduction_steps: documented
@@ -253,7 +254,7 @@ workflow:
         - mcp__chrome-devtools__emulate_network: Test slow network
         - mcp__chrome-devtools__emulate_cpu: Test CPU limits
 
-  step_5_planning:
+  step_7_planning:
     command: /plan [debug-approach]
     outputs:
       - debug_plan.md: technical_approach
@@ -276,7 +277,7 @@ workflow:
     validation: approach_defined
     # DevTools used as needed to inspect network, DOM, console, and performance
 
-  step_6_task_breakdown:
+  step_8_task_breakdown:
     command: /tasks
     outputs:
       - tasks/checklist.md  # Standard SpecKit path
@@ -304,7 +305,7 @@ workflow:
 
     validation: tasks_actionable
 
-  step_7_analysis:
+  step_9_analysis:
     command: /analyze
     outputs:
       - root_cause_report
@@ -339,13 +340,7 @@ workflow:
             marks: performance.getEntriesByType('mark').length
           })
 
-  step_8_quality_checklist:
-    command: /speckit.checklist
-    outputs:
-      - quality_checklist: generated
-    validation: checklist_generated
-
-  step_9_implementation_check:
+  step_10_implementation_check:
     command: /implement [debug-fix]
     checks:
       prerequisites: verified
@@ -373,7 +368,7 @@ workflow:
         - dependencies_loaded
         - no_breaking_changes
 
-  step_10_development:
+  step_11_development:
     approach: autonomous_fix_implementation
     requirements:
       - follow: knowledge/code_standards.md
@@ -426,7 +421,7 @@ workflow:
         - mcp__chrome-devtools__list_console_messages: Verify no new errors
         - mcp__chrome-devtools__list_network_requests: Check API impacts
 
-  step_11_completion:
+  step_12_completion:
     summary_document:
       location: specs/[NNN-debug]/debug-summary.md  # Debug artifacts in debug-numbered folders
       required_sections:
@@ -472,7 +467,7 @@ workflow:
       - documentation_complete: true
       - staging_verified: true
 
-  step_12_branch_integration:
+  step_13_branch_integration:
     name: Branch Integration Approval
     approval_gate:
       type: USER_APPROVAL_REQUIRED
@@ -495,6 +490,28 @@ workflow:
       tagging: optional; only on user request
 
 # ───────────────────────────────────────────────────────────────
+# ADAPTIVE RULES & ERROR HANDLING
+# ───────────────────────────────────────────────────────────────
+adaptive_rules:
+  conflicting_evidence:
+    trigger: clarification_iteration
+    max_iterations: 2
+  high_uncertainty:
+    insert: additional_logging_instrumentation
+  parallel_not_supported:
+    concurrency: 1
+    note: "If parallel sub-agents unsupported, run tasks one-by-one; keep review and synthesis."
+
+error_handling:
+  retry_policy:
+    targeted: true
+    max_retries: 2
+  fallback:
+    on_unresolved_conflict: present_top_two_paths_with_risks
+    proceed_with_partial: true
+    annotate_in_review: true
+
+# ───────────────────────────────────────────────────────────────
 # CRITICAL REMINDERS
 # ───────────────────────────────────────────────────────────────
 workflow_discipline:
@@ -515,5 +532,3 @@ workflow_discipline:
   self_discipline:
     when_tempted_to_skip: "MCP tools prevent production issues"
     when_confident_in_fix: "Chrome DevTools proves it works"
-    when_pressed_for_time: "MCP automation saves debugging time"
-    when_seems_simple: "Simple issues need MCP validation too"
