--- a/DEV - Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__feature_research.yaml
+++ b/DEV - Workflows/Prompts/github_spec_kit/parallel_sub_agents/sk_p__feature_research.yaml
@@ -13,17 +13,6 @@ operating_mode:
   tracking: progressive_research_stages
   validation: comprehensive_coverage
 
-runtime_compatibility:
-  parallel_sub_agents:
-    claude: native_supported
-    gpt: not_supported
-  fallback_policy:
-    non_claude_models:
-      enforce_sequential_mode: true
-      set_concurrency_to: 1
-      preserve_review_and_synthesis: true
-      annotate: "Parallel sub-agents are Claude-only; sequential fallback applied"
-
 rules:
   ALWAYS:
     - follow_research_methodology
@@ -169,6 +158,185 @@ workflow:
 
   step_5_quality_checklist:
     command: /speckit.checklist
+    outputs:
+      - quality_checklist: generated
+    validation: checklist_generated
+
+  step_6_solution_design:
+    action: Design solution architecture and integration patterns
+    deliverables:
+      - proposed_architecture
+      - integration_patterns
+      - api_design
+      - data_flow_diagrams
+      - component_interactions
+    chrome_devtools:
+      when: prototyping_solutions
+      actions:
+        - test_api_endpoints
+        - validate_approaches
+        - measure_performance_impact
+        - verify_compatibility
+    deep_analysis:
+      focus: solution_architecture_design
+      approach: comprehensive_design
+      outputs:
+        - solution_architecture
+        - implementation_patterns
+        - code_examples
+        - configuration_requirements
+        - architectural_patterns
+        - integration_blueprint
+        - implementation_roadmap
+        - edge_case_handling
+    validation: solution_designed
+
+  step_7_research_compilation:
+    action: Compile comprehensive research documentation for spec folder
+    deep_analysis:
+      focus: comprehensive_research_document
+      approach: exhaustive_documentation
+      required_sections:
+        - changelog_and_updates
+        - investigation_report
+        - executive_overview
+        - architecture_analysis
+        - technical_specifications
+        - constraints_and_limitations
+        - integration_patterns
+        - implementation_guide
+        - code_examples_and_snippets
+        - testing_strategies
+        - performance_optimization
+        - security_considerations
+        - future_proofing
+        - api_reference
+        - troubleshooting_guide
+        - acknowledgements
+      outputs:
+        - structured_research_synthesis
+        - implementation_roadmap
+        - technical_decision_log
+        - reference_documentation
+    document_structure:
+      format: markdown
+      location: "[SPEC_FOLDER]/research.md"
+      table_of_contents: required
+      code_blocks: syntax_highlighted
+      diagrams: ascii_art
+      cross_references: linked
+    required_sections:
+      investigation_report:
+        - request_summary
+        - current_behavior
+        - findings
+        - recommendations
+      overview:
+        - executive_summary
+        - architecture_diagram
+        - quick_reference_guide
+        - research_sources
+      core_architecture:
+        - system_components
+        - data_flow
+        - integration_points
+        - dependencies
+      technical_specifications:
+        - api_documentation
+        - attribute_reference
+        - event_contracts
+        - state_management
+      constraints_limitations:
+        - platform_limitations
+        - security_restrictions
+        - performance_boundaries
+        - browser_compatibility
+        - rate_limiting
+      integration_patterns:
+        - third_party_services
+        - authentication_handling
+        - error_management
+        - retry_strategies
+      implementation_guide:
+        - markup_requirements
+        - javascript_implementation
+        - css_specifications
+        - configuration_options
+      code_examples:
+        - initialization_patterns
+        - helper_functions
+        - api_usage
+        - edge_cases
+      testing_debugging:
+        - test_strategies
+        - debugging_approaches
+        - e2e_examples
+        - diagnostic_tools
+      performance:
+        - optimization_tactics
+        - benchmarks
+        - rate_limiting
+        - caching_strategies
+      security:
+        - validation_approach
+        - data_protection
+        - spam_prevention
+        - authentication
+      maintenance:
+        - upgrade_paths
+        - compatibility_matrix
+        - decision_trees
+        - spa_support
+      api_reference:
+        - attributes_table
+        - javascript_api
+        - events_reference
+        - cleanup_methods
+      troubleshooting:
+        - common_issues
+        - error_messages
+        - solutions
+        - workarounds
+    validation: documentation_complete
+    final_output:
+      location: "[SPEC_FOLDER]/research.md"
+      summary_message: |
+        Research documentation complete.
+        Comprehensive technical investigation has been documented in [SPEC_FOLDER]/research.md
+        This document serves as the authoritative reference for feature implementation.
+
+        Spec folder structure:
+        - [SPEC_FOLDER]/research.md - Complete research documentation
+
+        Next steps:
+        - Review research findings in the spec folder
+        - Validate technical approach
+        - Proceed to specification (/specify) if needed
+        - Use research as reference during implementation planning
+
+  step_8_branch_integration:
+    name: Branch Integration Approval
+    approval_gate:
+      type: USER_APPROVAL_REQUIRED
+      prompt: "All checks passed. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
+      confirmation_needed: true
+    integration_policy:
+      merge_strategy: rebase_then_fast_forward
+      safety_checks:
+        - clean working tree
+        - validations/tests/pass checks are green (as applicable for the workflow)
+        - no unresolved blockers
+      conflict_policy:
+        on_rebase_conflict: pause and ask for guidance
+        fallback_to_pr: offer to open a PR if user prefers manual resolution
+      steps:
+        - fetch origin
+        - update main (pull --ff-only)
+        - rebase feature branch onto main
+        - fast-forward merge into main
+        - push origin main
+        - after successful integration, offer to delete the feature branch locally and on origin (explicit confirmation required)
+      tagging: optional; only on user request
 
 # ───────────────────────────────────────────────────────────────
 # RESEARCH QUALITY STANDARDS
@@ -180,11 +348,55 @@ quality_standards:
     - error_handling_strategies
     - memory_leak_prevention
     - spa_compatibility
+  code_examples:
+    - working_snippets
+    - proper_error_handling
+    - performance_optimized
+    - accessibility_compliant
+    - browser_compatible
   analysis_depth:
     - edge_cases_covered
     - failure_modes_documented
     - recovery_strategies_defined
     - monitoring_approaches_specified
+
+# ───────────────────────────────────────────────────────────────
+# RESEARCH DOCUMENTS
+# ───────────────────────────────────────────────────────────────
+documents:
+  primary_deliverable:
+    type: research_document
+    format: markdown
+    location: "[SPEC_FOLDER]/research.md"
+    versioning: semantic
+    review_required: true
+  supplementary_materials:
+    location: "[SPEC_FOLDER]/"
+    optional_files:
+      - api_specification.md
+      - test_cases.md
+      - performance_benchmarks.md
+      - compatibility_matrix.md
+      - decision_flowcharts.md
+
+# ───────────────────────────────────────────────────────────────
+# SPEC FOLDER INTEGRATION
+# ───────────────────────────────────────────────────────────────
+spec_folder_structure:
+  note: |
+    This workflow generates research.md within a spec folder structure.
+    It does NOT follow the full GitHub SpecKit workflow (no /specify, /plan, etc).
+    It creates comprehensive research documentation to support feature planning.
+
+  workflow_relationship:
+    - This is a standalone research workflow
+    - Outputs to spec folders for consistency
+    - Can be used before or during SpecKit workflows
+    - Provides research foundation for specifications
+
+  expected_output:
+    - "[SPEC_FOLDER]/research.md" - Primary research documentation
+    - Optional supplementary files in spec folder as needed
 
 # ───────────────────────────────────────────────────────────────
 # ADAPTIVE RULES & ERROR HANDLING
